--- a/src/styles/redot.css
+++ b/src/styles/redot.css
@@ -1,7 +1,7 @@
 /* Dark mode colors. */
 :root {
-  --sl-font-system: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Roboto,
-  Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  --sl-font-system: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
+    Ubuntu, Roboto, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   --sl-color-bg: #16181c;
   --sl-color-bg-nav: #26292f;
